# USBINT1

./: .gitignore  .travis.yml  Makefile  README.md  db.go  error.go  event.go  event_test.go  firmware.go  io.go  io_test.go
c_code/: Makefile  usbint1.workspace
c_code/test_libusb/: main.c  test_libusb.mk
c_code/test_sqlite3/: main.c  test_sqlite3.mk  test_sqlite3.project  test_sqlite3.txt
c_code/test_sqlite3/Debug/: test.db
c_code/usbint1/: CMakeLists.txt  main.c  makefile  parse.cpp  sqlite_thread.c  usbint1.mk  usbint1.project  usbint1.txt
cmd/: main.go
cmd/usbapi/: build.sh  config.toml  main.go
cmd/usbapi/app/: graph.html  graph0.html  (+5 more)
cmd/usbint/: main.go  main_test.go
cmd/usbshad/: config.toml  main.go
cmd/usbsync/: config.toml  main.go
cmd/usbtest/: main.go
config/: config.go  config.toml  config_test.go  env_unix.go  env_windows.go
db/: db.go  db_test.go  influxdb.go  influxdb_test.go  mariadb_test.go  sqlite.go  sqlite_test.go
event/: event.go  event_test.go
firmware/: firmware.go  firmware_test.go  temp_ep3_int64.go  temperature.go
scripts/windows/: README.md  srvman_readme.txt
shading/: TEST.db-shm  TEST.db-wal  shading.go  shading_test.go
sync/: mariadb.go  mariadb_test.go
test/: usbint1.workspace
test/test_libusb/: main.c  test_libusb.mk
test_libusb/: main.c  test_libusb.project
test_libusb/Debug/: main.c.o.d
webapi/: 100.db  handler.go  handler_test.go  test.db  unix_handle.go  window_handle.go
webapi/app/: example.html
webapi/config/: config.go
wrapper/: temp_ep3_int64.go  temperature_simple.go  wrapper.go
(+36 files in other folders)
